samples/_failures_safe/1761357504_e4e282_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cf1ff128.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_cf1ff128.c:184: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_cf1ff128.c:183:5: error: expected declaration or statement at end of input
  183 |     for
      |     ^~~
